--- a/ms-catalogo/src/main/resources/application.yml
+++ b/ms-catalogo/src/main/resources/application.yml
@@ -1,8 +1,7 @@
 spring:
   application:
-    name: ms-gateway-service
+    name: ms-catalogo
   profiles:
     active: development
   config:
     import: optional:configserver:http://root:123456@localhost:6065
-
