--- a/ms-config-server/src/main/resources/application.yml
+++ b/ms-config-server/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/yheysonramos10/HotelSystem.git # repositorio
+          uri: https://github.com/markmercado1/Tienda.git # repositorio
           searchPaths:
             - config-data
           default-label: main
