--- a/config-data/ms-compra.yml
+++ b/config-data/ms-compra.yml
@@ -19,3 +19,15 @@ eureka:
       defaultZone: ${EUREKA_URI:http://localhost:8065/eureka}
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+resilience4j.circuitbreaker:
+  instances:
+    fallbackUpdateStock:
+      registerHealthIndicator: true
+      slidingWindowSize: 10
+      permittedNumberOfCallsInHalfOpenState: 3
+      slidingWindowType: TIME_BASED
+      minimumNumberOfCalls: 4
+      waitDurationInOpenState: 5s
+      failureRateThreshold: 50
+      eventConsumerBufferSize: 10
